--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <header class="header-bg">
+    <div class="header">
+        <a href="./">
+            <img src="./img/Glow Aroma.png" alt="Glow Aroma">
+        </a>
+        <nav aria-label="primaria">
+            <ul class="header-menu">
+                <li><a href="./velas.html">Velas</a></li>
+                <li><a href="./sobre.html">Sobre Nós</a></li>
+                <li><a href="./contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </div>
+  </header>
 </body>
 </html>
